Fixed padding issue on smaller screens

--- a/static/css/deepsouthsounds.css
+++ b/static/css/deepsouthsounds.css
@@ -348,7 +348,7 @@ div.event-content td {
 }
 
 .mix-container {
-    padding-left: 3px;
+    padding-left: 16px;
 }
 
 #sidebar-content-activity {
